Faltaba una dependencia por instalar. Crear usuario developer mapeado al usuario 1000 del host, y trabajar con el.

--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update
 # Essentials
 RUN apt-get install -y gawk wget git-core diffstat unzip texinfo gcc-multilib \
 build-essential chrpath socat cpio python python3 python3-pip python3-pexpect \
-xz-utils debianutils iputils-ping
+xz-utils debianutils iputils-ping file
 
 # Graphical and Eclipse Plugin Extras
 RUN apt-get install -y libsdl1.2-dev xterm
@@ -21,6 +21,18 @@ RUN apt-get install -y python-git
 
 # kernel compilation rpi needs this
 RUN apt-get install -y bc libncursesw5-dev
+
+
+RUN mkdir /home/developer && \
+echo "developer:x:1000:1000:Fagor Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
+echo "developer:x:1000:" >> /etc/group && \
+chown developer:developer -R /home/developer && \
+echo "developer ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
+
+USER developer
+ENV HOME /home/developer
+WORKDIR /home/developer
+
 
 # Use baseimage-docker's init system.
 CMD ["/sbin/my_init"]
